<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_beige_gradient"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tv_popular_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/it_don_t_mean_a_thing"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/years_active"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <include
        android:id="@+id/top_action_bar"
        layout="@layout/custom_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minWidth="52dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/top_action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_action_bar"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_legend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora_bold"
        android:text="@string/name"
        android:textColor="@color/deep_brown"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_action_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_photo_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_legend_name"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_legend_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/duke_ellington"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/share"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/olive_green"
        app:chipIcon="@drawable/ic_baseline_share_24"
        app:layout_constraintEnd_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintStart_toStartOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/cv_photo_wrapper" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/birth_name"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toTopOf="@+id/cv_photo_wrapper" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/born"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/died"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/years_active"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/instrument"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/popular_song"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cv_photo_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_birth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/edward_kennedy_ellington"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_born_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_died_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_years_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/lora"
        android:text="@string/years"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_instrument_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/piano"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/beige"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip">

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:fontFamily="@font/lora"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:justificationMode="inter_word"
            android:text="@string/intro" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>