<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="16dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:scaleType="centerCrop"
                android:src="@drawable/duke_ellington"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/text_me_one"
            android:text="@string/duke_ellington"
            android:textColor="@color/deep_brown"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/tv_instrument_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora"
            android:text="@string/instrument_label"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lora"
            android:text="@string/piano"
            android:textColor="@color/deep_brown"
            app:layout_constraintStart_toEndOf="@+id/tv_instrument_label"
            app:layout_constraintTop_toTopOf="@+id/tv_instrument_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>